@@ -87,7 +87,9 @@ class HTMLFormatter:
             division_fmt=r"{}/{}",
             power_fmt=r"{}<sup>{}</sup>",
             parentheses_fmt=r"({})",
-            sort_func=lambda x: unit._REGISTRY.formatter.default_sort_func(x, unit._REGISTRY),
+            sort_func=lambda x: unit._REGISTRY.formatter.default_sort_func(
+                x, unit._REGISTRY
+            ),
         )
 
     def format_quantity(
